--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-streamlit>=0.69
-matplotlib==3.8.2
-python>3
+streamlit==1.21.0
+gwosc==0.7.1
+gwpy==3.0.4
+matplotlib==3.5.3
+astropy==5.2.2
+numpy==1.23.5
+scipy==1.10.0
